<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="600dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

        </LinearLayout>
        <TextView
                android:textColor="@android:color/black"
                android:text="@string/cat_name_one"
                android:textSize="50sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:textColor="@android:color/black"
                android:text="@string/cat_name_two"
                android:textSize="50sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/buttonCategoryList"
                android:text="@string/bt_list_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/buttonAboutAct"
                android:text="@string/bt_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>