<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".About">
    <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:background="@android:color/holo_blue_dark"
                tools:ignore = "ContentDescription"
                android:layout_gravity="center"
                android:layout_width="120dp"
                android:layout_height="120dp"/>
        <LinearLayout
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/textCatFood"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/name_of_developer"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_marginTop="10dp"
                        android:textColor="@android:color/holo_blue_bright"
                        android:text="@string/email_of_developer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_gravity="bottom|end"
            android:orientation="vertical"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:textColor="@android:color/black"
                android:text="@string/name_of_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/hashtag_of_school"
                android:textColor="@android:color/holo_purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>